--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                         <th> Contato</th>
                     </tr>
                 </thead>
+            <tbody>
+            </tbody>
             </table>
         <footer>Agenda de Contatos - Todos os direitos reservados - 2024  ©</footer>
     </div>
